// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders App with search drawer closed correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#efefef",
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "height": 1334,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "blue",
            "borderRadius": 5,
            "justifyContent": "center",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 25,
            }
          }
        >
          Click Me!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`App renders App with search drawer open correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#efefef",
      "flex": 1,
      "paddingTop": 0,
    }
  }
>
  <View
    animatedStyle={
      {
        "value": {
          "transform": [
            {
              "translateY": 1334,
            },
          ],
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "white",
        "height": 1334,
        "marginBottom": 20,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "height": 100,
          "marginBottom": 20,
          "padding": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#484848",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Select Your Make or Model
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="close-button"
        >
          <Text />
        </View>
      </View>
      <TextInput
        placeholder="Type to Select Make "
        style={
          {
            "borderColor": "#d5d5d5",
            "borderRadius": 3,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#aaaaaa",
            "fontSize": 16,
            "height": 44,
            "marginTop": 20,
            "paddingLeft": 16,
          }
        }
      />
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "white",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingLeft": 28,
            "paddingRight": 31,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#484848",
              "fontSize": 15,
            }
          }
        >
          Accordion
        </Text>
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0deg",
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": "0deg",
                },
              ],
            }
          }
        >
          <Text />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#efefef",
            "height": 1,
            "width": "100%",
          }
        }
      />
      <View
        animatedStyle={
          {
            "value": {
              "height": 0,
              "overflow": "hidden",
            },
          }
        }
        collapsable={false}
        style={
          {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "white",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingLeft": 28,
            "paddingRight": 31,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#484848",
              "fontSize": 15,
            }
          }
        >
          Accordion
        </Text>
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0deg",
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": "0deg",
                },
              ],
            }
          }
        >
          <Text />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#efefef",
            "height": 1,
            "width": "100%",
          }
        }
      />
      <View
        animatedStyle={
          {
            "value": {
              "height": 0,
              "overflow": "hidden",
            },
          }
        }
        collapsable={false}
        style={
          {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "white",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingLeft": 28,
            "paddingRight": 31,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#484848",
              "fontSize": 15,
            }
          }
        >
          Accordion
        </Text>
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0deg",
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": "0deg",
                },
              ],
            }
          }
        >
          <Text />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#efefef",
            "height": 1,
            "width": "100%",
          }
        }
      />
      <View
        animatedStyle={
          {
            "value": {
              "height": 0,
              "overflow": "hidden",
            },
          }
        }
        collapsable={false}
        style={
          {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "white",
            "flexDirection": "row",
            "height": 50,
            "justifyContent": "space-between",
            "opacity": 1,
            "paddingLeft": 28,
            "paddingRight": 31,
            "paddingTop": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#484848",
              "fontSize": 15,
            }
          }
        >
          Accordion
        </Text>
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": "0deg",
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": "0deg",
                },
              ],
            }
          }
        >
          <Text />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#efefef",
            "height": 1,
            "width": "100%",
          }
        }
      />
      <View
        animatedStyle={
          {
            "value": {
              "height": 0,
              "overflow": "hidden",
            },
          }
        }
        collapsable={false}
        style={
          {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "position": "absolute",
            }
          }
        >
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
          <View
            style={
              {
                "width": 750,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#f9f9f9",
                  "height": 50,
                  "paddingBottom": 16,
                  "paddingLeft": 36,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#484848",
                    "fontSize": 15,
                  }
                }
              >
                AccordionItem
              </Text>
            </View>
            <View
              style={
                {
                  "backgroundColor": "#efefef",
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "height": 1334,
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "blue",
            "borderRadius": 5,
            "justifyContent": "center",
            "padding": 10,
          }
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 25,
            }
          }
        >
          Click Me!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
